==> rhgndf/tinyusb/src/portable/raspberrypi/rp2040/dcd_rp2040.c <==
#include "tusb_option.h"
#include "pico.h"
#include "hardware/sync.h"
#include "rp2040_usb.h"
#include "pico/fix/rp2040_usb_device_enumeration.h"
#include "device/dcd.h"
  #define FORCE_VBUS_DETECT 1
  #define USB_INTS_ERROR_BITS                                                                 \
    (USB_INTS_ERROR_DATA_SEQ_BITS | USB_INTS_ERROR_BIT_STUFF_BITS | USB_INTS_ERROR_CRC_BITS | \
     USB_INTS_ERROR_RX_OVERFLOW_BITS | USB_INTS_ERROR_RX_TIMEOUT_BITS)

void dcd_remote_wakeup(__unused uint8_t rhport) {
  pico_info("dcd_remote_wakeup %d\n", rhport);
  assert(rhport == 0);

  // since RESUME interrupt is not triggered if we are the one initiate
  // briefly enable SOF to notify usbd when bus is ready
  usb_hw_set->inte = USB_INTS_DEV_SOF_BITS;
  usb_hw_set->sie_ctrl = USB_SIE_CTRL_RESUME_BITS;
}

void dcd_disconnect(__unused uint8_t rhport) {
  (void) rhport;
  usb_hw_clear->sie_ctrl = USB_SIE_CTRL_PULLUP_EN_BITS;
}

void dcd_connect(__unused uint8_t rhport) {
  (void) rhport;
  usb_hw_set->sie_ctrl = USB_SIE_CTRL_PULLUP_EN_BITS;
}

bool dcd_edpt_open(uint8_t rhport, tusb_desc_endpoint_t const* desc_edpt, uint8_t const * desc_end TU_ATTR_UNUSED) {
  (void) rhport;
  const uint8_t xfer_type = desc_edpt->bmAttributes.xfer;
  hw_endpoint_open(desc_edpt->bEndpointAddress, tu_edpt_packet_size(desc_edpt), xfer_type, true);
  return true;
}

bool dcd_edpt_xfer(uint8_t rhport, uint8_t ep_addr, uint8_t *buffer, uint16_t total_bytes, bool is_isr) {
  (void)rhport;
  (void)is_isr;
  const uint8_t    epnum = tu_edpt_number(ep_addr);
  const tusb_dir_t dir = tu_edpt_dir(ep_addr);

  hw_endpoint_t *ep = hw_endpoint_get(epnum, dir);
  io_rw_32      *ep_reg  = get_ep_ctrl(epnum, dir);
  io_rw_32      *buf_reg = get_buf_ctrl(epnum, dir);
  rp2usb_xfer_start(ep, ep_reg, buf_reg, buffer, NULL, total_bytes);
  return true;
}

void dcd_edpt_stall(uint8_t rhport, uint8_t ep_addr) {
  (void)rhport;
  const uint8_t    epnum = tu_edpt_number(ep_addr);
  const tusb_dir_t dir   = tu_edpt_dir(ep_addr);
  hw_endpoint_t   *ep    = hw_endpoint_get(epnum, dir);

  if (epnum == 0) {
    // A stall on EP0 has to be armed so it can be cleared on the next setup packet
    usb_hw_set->ep_stall_arm = (dir == TUSB_DIR_IN) ? USB_EP_STALL_ARM_EP0_IN_BITS : USB_EP_STALL_ARM_EP0_OUT_BITS;
  }

  // abort first then stall and clear current pending buffer
  hw_endpoint_abort_xfer(ep);
  io_rw_32 *buf_reg = get_buf_ctrl(epnum, dir);
  *buf_reg          = USB_BUF_CTRL_STALL;
}

void dcd_edpt_clear_stall(uint8_t rhport, uint8_t ep_addr) {
  (void) rhport;
  const uint8_t    epnum = tu_edpt_number(ep_addr);
  const tusb_dir_t dir   = tu_edpt_dir(ep_addr);

  if (epnum != 0) {
    struct hw_endpoint* ep = hw_endpoint_get(epnum, dir);
    ep->next_pid = 0; // reset data toggle
    io_rw_32 *buf_reg      = get_buf_ctrl(epnum, dir);
    *buf_reg               = 0;
  }
}
